# MuGS

./: .editorconfig  .gitignore  LICENSE  PROJECT_OVERVIEW.md  README.md  STRUCTURE.md  TEST_REPORT.md  TODO.md  pyproject.toml  pyproject_mugs_mjlab.toml  pytest.ini
.context/: MEMORY.md
.github/workflows/: test.yml
assets/: README.md
assets/configs/: mask_config_kitchen.yaml
assets/objects/kitchen/: mug_blue.ply  plate_white.ply
assets/objects/misc/: ball_red.ply
assets/scenes/demo_kitchen/: cereal_bowl.ply  coffee_mug.ply  fruit_bowl.ply  pepper_shaker.ply  salt_shaker.ply  tea_cup.ply  water_glass.ply
assets/scenes/kitchen/: dinner_plate.ply  kitchen_scene.json  orange.ply  red_apple.ply  side_plate.ply  wine_glass.ply
docs/: API_QUICKSTART.md  API_REFERENCE.md  CAMERA_ALIGNMENT_FIX.md  DISCOVERSE_INTEGRATION.md  DISCOVERSE_ISSUES.md  EXTERNAL_ASSETS.md  FIRST_PERSON_SCENES.md  OVERVIEW.md  PROJECT_STATUS.md  RESEARCH_IDEAS.md  SHOWCASE.md  SUPER_RESOLUTION.md  TEST_REPORT.md  camera_alignment_fix_summary.md  discoverse_scenes.md  mjlab_real_interface_analysis.md  session_10_optimizations.md  session_9_camera_poses.md  testing_status_and_plan.md
docs/design/: INPUT_SPECIFICATION.md  PROJECT_ARCHITECTURE.md  TECHNICAL_DESIGN.md
docs/development/: PROJECT_MANIFEST.md  TODO.md
docs/guides/: 3DGS_ROOM_DATASETS.md  ASSET_ACQUISITION.md  GS_DATA_COLLECTION.md  GS_VIDEO_CAPTURE.md  INSTALLATION.md  PRETRAINED_MODELS.md  QUICK_START.md  SEGMENT_ID_SYSTEM.md
docs/plans/: PHASE1_OPTIMIZATION.md
docs/technical/: COORDINATE_ALIGNMENT.md  SEGMENTATION_ID_GUIDE.md
examples/: DISCOVERSE_DEMO_README.md  debug_camera_params.py  discoverse_full_demo.py  discoverse_proper_demo.py  discoverse_task_demo.py  first_person_demo.py  gaussian_sensor_demo.py  gaussian_sensor_mjlab_test.py  gaussian_sensor_pretrained_demo.py  gaussian_sensor_visible_robot_demo.py  gaussian_sensor_working_hybrid.py  mjlab_integration_example.py  mjlab_yam_lift_demo.py  quality_comparison_demo.py  sr_pipeline_demo.py  test_batch_optimization.py  test_mjlab_16envs.py  test_mjlab_batch_render.py  unified_demo.py  use_external_assets.py  yam_standalone_demo.py  yam_wrist_camera_demo.py
examples/demo/: kitchen_scene_demo.py
examples/phase1/: README.md  hybrid_rendering_fixed.py  hybrid_rendering_real_gs.py  hybrid_rendering_test.py
examples/scenes/: first_person_kitchen.xml
models/mjcf/tmp/: airbot_play_place_coffeecup.xml  airbot_play_place_coffeecup_custom_cam.xml
mugs/: README.md  pyproject.toml
mugs/src/mugs/: __init__.py
mugs/src/mugs/rendering/: __init__.py  core.py
mugs/src/mugs/utils/: __init__.py  mask_config.py
mugs_mjlab/: README.md  pyproject.toml
mugs_mjlab/src/mugs_mjlab/: __init__.py
mugs_mjlab/src/mugs_mjlab/sensors/: __init__.py  gaussian_sensor.py
mugs_mjlab/src/mugs_mjlab/utils/: __init__.py
scenes/: first_person_kitchen.xml
scripts/: download_external_assets.py  download_sr_models.py  generate_test_report.py  show_results.sh
scripts/data_collection/: decompress_supersplat.py  download_assets.py  download_discoverse_scenes.sh  download_mipnerf360.py
scripts/debug/: debug_camera.py
scripts/demos/: hybrid_kitchen_robot.py  hybrid_kitchen_sequence.py
scripts/evaluation/: benchmark_full_pipeline.py  benchmark_gsplat.py  benchmark_gsplat_parallel.py  benchmark_mjlab_envs.py  benchmark_pretrained_kitchen.py  check_environment.py  render_pretrained_kitchen.py
scripts/scene_gen/: generate_kitchen_scene.py
scripts/utils/: fix_gsplat_cuda.sh  generate_simple_3dgs.py  preview_scene_ply.py  preview_unpacked_ply.py
showcase/androidtwin_g1/: README.md
src/mugs/: __init__.py
src/mugs/postprocess/: __init__.py  super_resolution.py
src/mugs/sensors/: __init__.py  base.py  gaussian_sensor.py  gaussian_sensor_mjlab.py
src/mugs/utils/: mask_config.py  rendering.py
src/mugs_mjlab/: README.md  __init__.py
src/mugs_mjlab/sensors/: __init__.py  gaussian_sensor.py
src/mugs_mjlab/tasks/: __init__.py  benchmark.py  yam_lift_cube_gs.py
tests/: __init__.py  conftest.py  test_basic.py  test_mask_config.py  test_rendering_utils.py
tests/integration/: test_sensor_creation.py  test_smoke_integration.py
tests/unit/: test_config.py  test_smoke_unit.py
