[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mugs"
version = "0.1.0"
description = "MuGS: MuJoCo Gaussian Splatting - Photorealistic VLA Benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@domain.com"},
]
keywords = [
    "robotics",
    "vision-language-action",
    "vla",
    "3d-gaussian-splatting",
    "mujoco",
    "reinforcement-learning",
    "simulation",
    "benchmark",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "gsplat>=1.5.0",
    "mjlab>=0.1.0",
    "pyyaml>=6.0",
    "plyfile>=0.9",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "lpips>=0.1.4",
    "einops>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
]

sr = [
    "timm>=0.9.0",  # For SwinIR backbone
    "tensorrt>=8.6.0",  # For SR inference optimization (optional)
]

assets = [
    "opencv-python>=4.8.0",  # For COLMAP data processing
    "trimesh>=3.23.0",  # For mesh extraction
]

all = [
    "mugs[dev,sr,assets]",
]

[project.urls]
Homepage = "https://github.com/YOUR_ORG/mugs"
Documentation = "https://github.com/YOUR_ORG/mugs/tree/main/docs"
Repository = "https://github.com/YOUR_ORG/mugs"
Issues = "https://github.com/YOUR_ORG/mugs/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mugs = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/mugs --cov-report=html --cov-report=term"
