[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mugs-mjlab"
version = "0.1.0"
description = "MuGS integration for MJLab simulation framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "MuGS Team", email = "your.email@domain.com"},
]
keywords = [
    "mugs",
    "mjlab",
    "mujoco",
    "reinforcement-learning",
    "sensor",
    "3d-gaussian-splatting",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mugs>=0.1.0",
    "mujoco>=3.0.0",
    # mjlab will be added when available
    # "mjlab>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_ORG/mugs"
Repository = "https://github.com/YOUR_ORG/mugs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
